distro-info (0.14+deb8u1) jessie; urgency=medium

  * Handle currently unknown columns in CSV data.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 27 Jan 2021 19:46:16 -0700

distro-info (0.14) unstable; urgency=medium

  * Fix days in month calculation for leap years (Closes: #766142)
  * Bump Standards-Version to 3.9.6

 -- Benjamin Drung <bdrung@debian.org>  Tue, 21 Oct 2014 10:09:57 +0200

distro-info (0.13) unstable; urgency=medium

  [ Benjamin Drung ]
  * ubuntu-distro-info: Add --latest option. Use this option instead of --devel
    if you want to fallback to --stable for outdated data. (LP: #1309591)
  * distro_info_test/test_help.py: Close file descriptors at the end.

  [ Dimitri John Ledkov ]
  * Add --series lookup.

 -- Benjamin Drung <bdrung@debian.org>  Sat, 10 May 2014 20:55:33 +0200

distro-info (0.12) unstable; urgency=medium

  * Fix Ubuntu EOL test cases (The EOL date of raring is two days later).
    (Closes: #735801)
  * Bump Standards-Version to 3.9.5.

 -- Benjamin Drung <bdrung@debian.org>  Sat, 18 Jan 2014 11:45:43 +0100

distro-info (0.11) unstable; urgency=low

  * Added ability to specify --days[=MILESTONE] option.
    Thanks to James Hunt for implementing it.
  * Use canonical URLs for Vcs fields.
  * Bump Standards-Version to 3.9.4 (no changes needed).
  * Switch to debhelper 9.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 02 Aug 2013 23:35:40 +0200

distro-info (0.10) unstable; urgency=low

  * Provide more useful errors (pointing to a README in distro-info-data) when
    the data is outdated.
  * Actually test with Python 3 (typo)
  * libdistro-info-perl: Print a warning and return 0 when data is out of
    date, rather than dying.
  * Use dpkg-buildflags and enable hardening.

 -- Stefano Rivera <stefanor@debian.org>  Fri, 01 Jun 2012 18:36:12 +0200

distro-info (0.9) unstable; urgency=low

  * debian-distro-info: Add an --alias option. Thanks to Antonio Ospite
    for the work. (Closes: #645171)